# flask-entra-auth

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .safety-policy.yml  .snyk  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  LICENSE.md  README.md  app.py  docker-compose.yml  flask_azure.http  gitlab-ci.Dockerfile  manage.py  poetry.toml  pyproject.toml  requirements.txt  setup.py
.gitlab/issue_templates/: release.md
examples/: __init__.py  tests.py
flask_azure_oauth/: __init__.py  errors.py  keys.py  resource_protector.py  tokens.py
flask_azure_oauth/mocks/: tokens.py
provisioning/terraform/: 00-terraform.tf  02-providers.tf  54-azure_app_registrations.tf  docker-compose.yml
src/flask_azure/: __main__.py  entra_exceptions.py  entra_protector.py  entra_token.py  resource_protector.py  token.py
src/flask_azure_oauth/: __init__.py  errors.py  resource_protector.py  tokens.py
src/flask_azure_oauth/mocks/: keys.py  tokens.py
src/flask_entra_auth/: exceptions.py  resource_protector.py  token.py
src/flask_entra_auth/mocks/: jwks.py  jwt.py
support/python-packaging/: parse_version.py
support/python-tests-junit/: tests.py
tests/: app.py  conftest.py  mock_jwks.py  mock_jwt.py  test_app.py  test_authorisation_header.py  test_base.py  test_json_web_key.py  test_json_web_token.py  test_json_web_token_introspection.py  test_json_web_token_scopes.py  test_main.py  test_mocks.py  utils.py
