[tool.poetry]
name = "flask-azure"
version = "0.1.0"
description = "Experiment to update how access to a Flask app can be controlled using Azure/Entra ID."
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
readme = "README.md"
license = "MIT"
packages = [{include = "flask_azure", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
requests = "^2.32.3"
authlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
